--- a/WebApp/Pages/CategoriesComponent.razor
+++ b/WebApp/Pages/CategoriesComponent.razor
@@ -1,5 +1,7 @@
 ﻿@page "/categories"
+@inject NavigationManager NavigationManager
 @inject UseCases.IViewCategoriesUseCase ViewCategoryUseCase
+
 
 <h3>Manage Categories</h3>
 
@@ -23,6 +25,9 @@
 		</tbody>
 	</table>
 }
+<br/>
+<button type="button" @onclick="OnClickAddCategory" class="btn btn-primary">Add Category</button>
+
 
 @code {
 	private List<Category> categories;
@@ -31,5 +36,10 @@
 	{
 		base.OnInitialized();
 		categories = ViewCategoryUseCase.Execute().ToList();
+	}
+
+	private void OnClickAddCategory()
+	{
+		NavigationManager.NavigateTo("/addcategory");
 	}
 }
